<resources>
    <string name="app_name">WorkoutApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_hint_username">Username</string>
    <string name="default_hint_password">Password</string>
    <string name="forgot_password_text_view">Forgot password?</string>
    <string name="or_text_view">OR</string>
    <string name="skip_text_view">Skip</string>
    <string name="sign_up_text_view">Sign up</string>
    <string name="image_description_login">Arnold Schwarzenegger</string>
    <string name="exercises_menu_title">Exercises</string>
    <string name="programs_menu_title">Programs</string>
    <string name="nutrition_menu_title">Nutrition</string>
    <string name="settings_menu_title">Settings</string>
    <string name="progress_menu_title">Progress</string>
    <string name="weight_title_progress">Weight</string>
    <string name="height_title_progress">Height</string>
    <string name="fat_title_progress">Fat %</string>
    <string name="muscle_title_progress">Muscle %</string>
    <string name="own_programs_title">Own programs</string>
    <string name="other_programs_title">Other programs</string>
    <string name="add_new_program_content_description">Add new program</string>
    <string name="default_title">Title</string>
    <string name="add_exercise_btn">add exercise</string>


    <string-array name="exercises">
        <item>Chest</item>
        <item>Back</item>
    </string-array>
</resources>