<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/less_than_black"
    tools:context=".screens.login.LoginFragment">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/image_description_login"
        android:scaleType="centerCrop"
        android:src="@drawable/login_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/background_edit_text"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_image">

        <ImageView
            android:id="@+id/username_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_edit_text"
            android:layout_marginStart="@dimen/micro_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@color/transparent"
            android:hint="@string/default_hint_username"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/color_hint_gray"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/username_image"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/background_edit_text"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_field">

        <ImageView
            android:id="@+id/password_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_edit_text"
            android:layout_marginStart="@dimen/micro_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@color/transparent"
            android:hint="@string/default_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/color_hint_gray"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/password_image"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@drawable/background_edit_text"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:backgroundTint="@color/color_hint_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_field" />

    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/forgot_password_text_view"
        android:textColor="@color/color_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <TextView
        android:id="@+id/or_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/sign_up_tv"
        android:text="@string/or_text_view"
        android:textColor="@color/color_gray"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_tv" />

    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_view"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/skip_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sign_up_tv"
        android:layout_marginEnd="@dimen/huge_margin"
        android:text="@string/skip_text_view"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_tv"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>